# EMH

./: .gitignore  CITATION.cff  README.md  [2026_1]_[Fin]_Difussion_Model_EHM.ipynb  asset_pipeline.md  codex_methodology_revision_memo.md  emh_interpretation_note.md  notebook_dump.txt  pyproject.toml  reference_audit.md  robustness_audit.md
app/: main.py
archive/legacy_notebook/: [2026_1]_[fin]_difussion_model_ehm.py  code_cells.txt  dump_notebook.py
data/processed/: amihud.csv  mask.csv  metadata.json  returns.csv
data/raw/: market_data_20260421_063653.csv
docs/: reproducibility.md
docs/audit/: baseline_notebook_audit.md  context_file_hygiene.md  final_verification_report.md  methodological_risks.md  reproducibility_gaps.md
docs/data/: data_dictionary.md  leakage_risk_assessment.md
docs/theory/: diffusion_theory.md  emh_foundations.md
output/working_paper/: manifest.json
paper/: manuscript.qmd  references.bib
reports/: reference_metadata_check.json  scopus_diffusion_finance.json  scopus_emh_recent.json  scopus_etf_predictability.json  scopus_latam_efficiency.json  scopus_predictability_oos.json
reports/logs/: best_diffusion_model.pt
reports/tables/: by_regime_performance.csv  diagnostic_tests.csv  diffusion_ablation.csv  diffusion_seed_sensitivity.csv  diffusion_training_stability.csv  distributional_metrics.csv  dm_tests.csv  experiment_results.csv  horizon_stratified_inference.csv  (+13 more)
scripts/: build_manuscript_assets.py  build_working_paper.py  download_open_access.py  run_pipeline.py  search_scopus.py  topic_batch_download.py
tex/: main.tex
(+27 files in other folders)
