[project]
name = "emh-latam"
version = "0.1.0"
description = "Efficient Market Hypothesis in Latin America using Diffusion Models and Explainable AI"
authors = [{ name = "Antigravity", email = "antigravity@gemini.ai" }]
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
    "torch",
    "torchvision",
    "captum",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "streamlit",
    "plotly",
    "statsmodels",
    "pyyaml",
    "requests",
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
